<resources>
    <string name="app_name">District of Books</string>
    <string name="user_name">Username</string>
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="reading_qute">Reading Qute</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="logo">logo</string>
    <string name="back_to_start">back to start</string>
    <string name="login_title">Sign In</string>
    <string name="sign_up_logo">Sign Up</string>
    <string name="confirn_passworrd">Confirn Passworrd</string>
    <string name="phone_number">Phone number 05xxxxxxx</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="home_title">Home</string>
    <string name="favorite_title">Favorite</string>
    <string name="add_book">Add</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="change_email">Change email</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_password">Change password</string>
    <string name="edit_change_profile_photo">Edit/change profile photo</string>
    <string name="bio">Bio</string>
    <string name="edit_or_change_avatar">Edit or change avatar</string>
    <string name="edit_your_date_of_birth">Edit your date of birth</string>
    <string name="change_district">Change District</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="forget_your_password_re_set_it_by_one">Forget your Password? Re-set it by one:</string>
    <string name="or_sign_in_with_google">or, Sign In with Google</string>
    <string name="full_name">Full Name</string>

    <!-- Error masseges String -->
    <string name="err_msg_enter_username">Please enter a user name!</string>
    <string name="err_msg_proper_username">Please enter a valid user name length! </string>
    <string name="err_msg_enter_full_name">Please enter your name!</string>
    <string name="err_msg_enter_password">Please enter password!</string>
    <string name="err_msg_enter_confirm_password">Please re-enter the password!</string>
    <string name="err_msg_password_mismatch">The password are not matched!</string>
    <string name="err_msg_enter_phone_number">Please enter phone number!</string>
    <string name="err_msg_enter_proper_phone_number">Please enter Saudi phone number!</string>
    <string name="err_msg_enter_email">Please enter an e-mail!</string>
    <string name="err_msg_enter_proper_email">Please enter a proper e-mail!</string>
    <string name="success_msg_validation_info">Your Registration info is Valid!</string>
    <string name="msg_sccessful_rgister">Your Are Successfully Registered</string>
    <string name="msg_sccessful_login">You Logged in Successfully</string>
    <string name="err_msg_failed_login">Your login failed!</string>
    <string name="err_msg_enter_correct_password">Password should not have a space, must have 1 special
    charcters, at least 8 length</string>

    <!-- Spiners Strings -->
    <string-array name="bookstatus">
        <item>New</item>
        <item>Old</item>
        <item>like new</item>
    </string-array>

    <string-array name="Genera">
        <item>Eduction</item>
        <item>philosophy</item>
        <item>Horror</item>
        <item>novels</item>
        <item>children books</item>
        <item>Entertainment</item>
    </string-array>

    <string-array name="ServiceType">
        <item>For Selling</item>
        <item>For Renting</item>
        <item>For Borrowing</item>
        <item>For Donating</item>
        <item>For Exchanging with book</item>
    </string-array>

    <string-array name="Districts">
        <item>Al Moqable</item>
        <item>Al Shrofyah</item>
        <item>Ain Najim</item>
        <item>Al Syasb</item>
        <item>Al Eayouny</item>
    </string-array>

</resources>

