<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/HomeNavigation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_title" />

    <item
        android:id="@+id/FavoriteNavigation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/favorite_title"/>

    <item
        android:id="@+id/AddBookNavigation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/add_book"/>

    <item
        android:id="@+id/SearchNavigation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/ProfileNavigation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
</menu>