<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/med_threecolo"
    tools:context=".ResetPassword">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backStartFromSignup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/Honeydew"
        android:clickable="true"
        android:contentDescription="@string/back_to_start"
        android:focusable="true"
        android:orientation="horizontal"
        app:backgroundTint="@color/MaizeCrayola"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ResetPasswordTiltle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="3dp"
        android:text="@string/reset_password_title"
        android:textColor="@color/PruassianBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_lock_reset_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <RadioGroup
        android:id="@+id/restMethods"
        android:layout_width="342dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:checkedButton="@id/resetPassByPhone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResetPasswordTiltle"
        app:layout_constraintVertical_bias="0.18">

        <RadioButton
            android:id="@+id/resetPassByPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_bg"
            android:buttonTint="@color/Honeydew"
            android:text="@string/phone_number"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/resetPassByEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_bg"
            android:buttonTint="@color/Honeydew"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="TextContrastCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/methodsLabel"
        android:layout_width="339dp"
        android:layout_height="26dp"
        android:layout_marginBottom="12dp"
        android:labelFor="@id/restMethods"
        android:text="@string/forget_your_password_re_set_it_by_one"
        android:textColor="@color/PruassianBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/restMethods"
        app:layout_constraintEnd_toEndOf="@+id/restMethods"
        app:layout_constraintStart_toStartOf="@+id/ResetPasswordTiltle" />
</androidx.constraintlayout.widget.ConstraintLayout>